# monorepo

./: .gitignore  .nxignore  AGENTS.md  biome.json  nx.json  package.json  turbo.json
.github/: CODEOWNERS
apps/api/: biome.json  drizzle.config.ts  package.json
apps/api.v2/: biome.json  package.json
apps/api.v2/src/: main.ts
apps/api.v2/src/modules/auth/: auth.controller.ts  auth.module.ts  auth.service.ts  session.decorator.ts  session.guard.ts
apps/api.v2/src/modules/contest/: contest.controller.ts  contest.dto.ts  contest.module.ts  contest.repository.ts
apps/api.v2/src/modules/database/: database.schema.ts  database.service.ts
apps/api.v2/src/modules/problems/: problem.controller.ts  problem.dto.ts  problem.module.ts  problem.repository.ts
apps/api/drizzle/20260621040939_setup_basics/: migration.sql  snapshot.json
apps/api/src/: main.ts
apps/api/src/modules/auth/: index.ts  permissions.ts  service.ts
apps/api/src/modules/db/: connect.ts  connection.ts  enums.ts  index.ts  schema.ts
apps/api/src/modules/problems/: index.ts  model.ts  repository.ts
apps/api/src/modules/submission/: client.ts  connect.ts  index.ts  repository.ts
config/: gateway.yaml  manager.example.toml  processor.example.toml
docs/: problems-api.md
services/: Cargo.toml  project.json
services/crates/api_server/: Cargo.toml
services/crates/api_server/src/: config.rs  lib.rs  main.rs
services/crates/api_server/src/models/: enums.rs  mod.rs
services/crates/api_server/src/routers/: problems.rs
services/crates/api_server_db/: Cargo.toml
services/crates/api_server_db/src/models/: enums.rs  http.rs  problems.rs  problems_tags.rs  tags.rs  test_cases.rs
services/crates/api_server_db/src/repositories/: mod.rs  problems.rs  test_cases.rs
services/crates/auth/: Cargo.toml
services/crates/auth/src/: extractor.rs  hash.rs  lib.rs  router.rs  token.rs
services/crates/auth/src/models/: http.rs  users.rs
services/crates/gateway/: Cargo.toml
services/crates/gateway/src/: config.rs  jwks.rs  lib.rs  main.rs  router.rs  service.rs
services/crates/gateway/src/rate_limiter/: memory.rs  mod.rs
services/crates/judge_core_agent/: Cargo.toml
services/crates/judge_core_agent/src/: lib.rs  main.rs
services/crates/judge_core_agent/src/limit/: cgroup.rs  seccomp.rs
services/crates/judge_core_agent/src/verdict/: cpp.rs  mod.rs
services/crates/judge_core_agent_standalone/: Cargo.toml
services/crates/judge_core_manager/: Cargo.toml
services/crates/judge_core_manager/src/: config.rs  lib.rs  main.rs  pool.rs  provisioner.rs  router.rs  scaler.rs
services/crates/judge_core_sdk/: Cargo.toml
services/crates/judge_core_sdk/src/: lib.rs
services/crates/judge_core_shared/: Cargo.toml
services/crates/judge_core_shared/src/models/: http.rs  mod.rs
services/crates/judge_core_standalone/src/: main.rs
services/crates/submission_processor/: Cargo.toml
services/crates/submission_processor/src/: config.rs  error.rs  main.rs  message.rs  rabbitmq.rs
services/judge-core/: Cargo.toml  package.json  project.json
services/judge-core/crates/agent/: Cargo.toml  Dockerfile
services/judge-core/crates/agent/src/: lib.rs  main.rs
services/judge-core/crates/agent/src/limit/: cgroup.rs  mod.rs  seccomp.rs
services/judge-core/crates/agent/src/verdict/: cpp.rs  mod.rs
services/judge-core/crates/manager/: Cargo.toml
services/judge-core/crates/manager/src/: lib.rs  main.rs  (+4 more)
services/judge-core/crates/runner/: Cargo.toml
services/judge-core/crates/shared/: Cargo.toml
services/judge-core/crates/standalone/: Cargo.toml
services/judge-core/crates/standalone/src/: main.rs
services/submission-processor/: package.json
services/submission-processor/src/: main.ts
(+3 files in other folders)
