[package]
name = "api_server"
edition.workspace = true
version = "0.1.0"

[dependencies]
sea-orm = { workspace = true, features = ["macros", "sqlx-postgres", "runtime-tokio-rustls"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
auth = { path = "../auth" }
serde = { workspace = true }
config_macro = { workspace = true }
config = { workspace = true }
thiserror = { workspace = true }
