[package]
name = "gateway"
edition.workspace = true
version = "0.1.0"

[dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
config = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
