[package]
name = "submission-processor"
version = "0.1.0"
edition = "2024"

[dependencies]
lapin = "4.10"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "2.0"
judge_core_sdk = { path = "../judge_core_sdk" }
judge_core_shared = { path = "../judge_core_shared" }
