[package]
name = "agent"
edition.workspace = true

[dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "net", "signal", "fs", "process", "time"] }
shared = { workspace = true }
thiserror = { workspace = true }
libseccomp = "0.4.0"
libc = { workspace = true }
cgroups-rs = "0.5.0"

tracing = { workspace = true }
tracing-subscriber = { workspace = true }
